[package]
name = "proof-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
bundlr-sdk = "0.4.3"
reqwest = "0.11.18"
sha256 = "1.1.4"
data-encoding = "2.3.2"
sha2 = "0.10.2"
serde_json = "1.0.97"
